# ml-audio-classifier-example-for-pico

./: .gitignore  .gitmodules  155006__rayprice__smoke-detector-alarm.wav.license.txt  164686__deleted-user-2104797__siren.wav.license.txt  255180__adamweeden__bs-fire-alarm-alternating-2hz.wav.license.txt  325367__moonlightshadow__fire-house-alarm.mp3.license.txt  369847__splicesound__smoke-detector-alarm-distant-neighboring-room-perspective.wav.license.txt  369848__splicesound__smoke-detector-alarm-close-perspective.wav.license.txt  ALRMElec_Smoke detector alarm (ID 0800)_BSB.wav.license.txt  ALRMElec_Smoke detector alarm 2 (ID 1151)_BSB.wav.license.txt  ALRMElec_Smoke detector alarm 3 (ID 1153)_BSB.wav.license.txt  README.md  linux.md  ml_audio_classifier_example_for_pico.ipynb  windows.md
colab_utils/: audio.py  pico.py  serial_monitor.py
inference-app/: CMakeLists.txt
inference-app/src/: dsp_pipeline.cpp  dsp_pipeline.h  main.cpp  ml_model.cpp  ml_model.h  tflite_model.h
